manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    function: assignment
  name: assignment-app
  namespace: assignment
spec:
  ports:
  - name: http
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    function: assignment
  sessionAffinity: None
  type: ClusterIP
