manifests/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: assignment-app-rule
spec:
  host: assignment-app
  subsets:
  - name: v1
    labels:
      version: blue
  - name: v2
    labels:
      version: green
